@@ -123,6 +123,7 @@
       This is especially conveniant for scripting.
     * FIX: fixed layout of login dialog when showing up error messages
     * FIX: Fixed styling of wato quickaccess snapin preview
+    * FIX: Made printer_supply perfometer a bit more robust against bad perfdata
 
     Livecheck:
     * FIX: Compile livecheck also if diet libc is missing
